Revert "Add a class for env vars to prevent wrapping"

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -321,12 +321,6 @@ code {
   word-wrap: anywhere;
 }
 
-code.env_var {
-  white-space: nowrap !important;
-}
-
-
-
 /***** Widgets ****************************************************************/
 //
 //*****************************************************************************/
@@ -434,7 +428,7 @@ pre {
 }
 
 .serveronly {
-	color: #4e9eb3;
+	color: #4e9eb3; 
 }
 
 .server-version-badge {
